Some bugs related to updation of profile is resolved

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -20,6 +20,11 @@
     --font-mono: "Roboto Mono", "monospace";
 }
 
+/* Buttons */
+.yellowButton {
+  @apply cursor-pointer rounded-md bg-yellow-300 px-[20px] py-[8px] font-semibold text-richblack-900;
+}
+
 .blackButton {
   @apply cursor-pointer rounded-md bg-richblack-800 px-[20px] py-[8px] font-semibold text-richblack-5;
 }
